objects/ACCObj1234__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestFeidl1234__c</fullName>
        <label>TestFeidl1234</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TestField3456__c</fullName>
        <label>TestField3456</label>
        <type>Phone</type>
    </fields>
    <label>ACCObj1234</label>
    <nameField>
        <label>ACCObj1234 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACCObj1234s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>